# whale

./: .env.example  .gitignore  README.md  README_ori.md  pyproject.toml
benchmarks/: coding_tasks.json
docs/architecture/: agent-harness-v1-implementation-status.md  agent-harness-v1-overview.md  run-session-schema.md  v1-summary.md  whale-v1-implementation-status.md  whale-v1-platform-design.md
docs/review-pack/: README.md
scripts/: collect_resume_metrics.py  run_large_scale_experiments.py  run_provider_experiments.py
tests/: test_config.py  test_context_manager.py  test_evaluator.py  test_harness.py  test_harness_cli.py  test_memory.py  test_metrics.py  test_run_store.py  test_safety_invariants.py  test_skills.py  test_task_state.py  test_tool_policy.py  test_whale.py
whale/: __init__.py  cli.py  config.py  context_manager.py  evaluator.py  harness.py  harness_cli.py  memory.py  metrics.py  models.py  run_store.py  runtime.py  skills.py  task_state.py  tool_policy.py  tools.py  workers.py  workspace.py
